--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "test-app",
-  "version": "0.0.0",
+  "name": "test-angular-sqlite-app",
+  "version": "0.0.1",
+  "description": "Angular SQLite Application",
+  "author": "Jean Pierre Quéau",
+  "license": "MIT",
+
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run copy:sql:wasm && ng serve",
     "build": "ng build",
+    "copy:sql:wasm": "copyfiles -u 3 node_modules/sql.js/dist/sql-wasm.wasm src/assets",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -18,6 +23,13 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@capacitor-community/sqlite": "^5.5.1",
+    "@capacitor/android": "^5.6.0",
+    "@capacitor/angular": "^2.0.3",
+    "@capacitor/core": "^5.6.0",
+    "@capacitor/ios": "^5.6.0",
+    "@capacitor/toast": "^5.0.6",
+    "@ionic/pwa-elements": "^3.2.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -26,7 +38,9 @@
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
+    "@capacitor/cli": "^5.6.0",
     "@types/jasmine": "~4.3.0",
+    "copyfiles": "^2.4.1",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -34,5 +48,12 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.8.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jepiqueau/test-angular-sqlite-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jepiqueau/test-angular-sqlite-app.git/issues"
   }
 }
